--- a/package.json
+++ b/package.json
@@ -15,6 +15,18 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@emotion/cache": "^11.9.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
+    "@solana-mobile/wallet-adapter-mobile": "^0.0.1-alpha.2",
+    "@solana/wallet-adapter-base": "^0.9.9",
+    "@solana/wallet-adapter-react": "^0.15.8",
+    "@solana/wallet-adapter-react-ui": "^0.9.10",
+    "@solana/wallet-adapter-wallets": "^0.16.8",
+    "@solana/web3.js": "^1.47.4",
     "next": "12.2.2",
     "prop-types": "^15.7.2",
     "react": "18.2.0",
