--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "devDependencies": {
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.2.2",
@@ -42,7 +44,7 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
@@ -57,5 +59,9 @@
     "*.{json,md}": [
       "npm run prettier:fix"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:lawliet831012/Dapp-practice.git",
+  "author": "louis.wu <lawliet831012@gmail.com>",
+  "license": "MIT"
 }
